# yuancheng

./: .env.example  .gitattributes  .gitignore  README.md
.github/workflows/: ci.yml  security-audit.yml
agent/: Directory.Build.props  EmployeeBehavior.Agent.sln  README.md
agent/installer/: Build-AgentInstallerPackage.ps1  Build-AgentMsi.ps1  README.md  (+1 more)
backend/: README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routes/: __init__.py  admin.py  agent.py  auth.py  events.py  health.py  screenshots.py  timeline.py
backend/app/core/: config.py  db.py
backend/app/models/: __init__.py  entities.py
backend/app/schemas/: admin.py  agent.py  auth.py  query.py
backend/app/services/: __init__.py  access_control.py  access_scope.py  agent.py  agent_auth.py  ai_analysis.py  attendance.py  attendance_rules.py  audit.py  auth.py  employee_admin.py  policies.py  queries.py  retention.py  screen_analysis.py  storage.py
backend/scripts/: smoke_attendance_flow.py
backend/tests/: conftest.py  test_access_scope.py  test_admin_api.py  test_agent_api.py  test_auth_api.py  test_db_schema.py  test_health.py  test_queries.py  test_screen_analysis.py
deploy/: docker-compose.yml
docs/: AGENT_DEPLOYMENT_RUNBOOK.md  BACKEND_SCHEMA_SELF_HEAL.md  DEVELOPMENT_PLAN.md  OPERATIONS_AND_DEMO_GUIDE.md  PRD.md  RELEASE_CHECKLIST.md  TECHNICAL_ARCHITECTURE.md  TECH_STACK_AND_ADMIN_PLAN.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
scripts/: check-tools.ps1  dev-down.ps1  dev-up.ps1  start-dev-app.ps1
(+134 files in other folders)
